maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:7: error: '{' expected but identifier found.
    match a
          ^