maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here 
  var a = random3()
  do{
    a = random3()
    match a
  }while (estSurBiscuit() == false)
}